--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/admin/dist/css/drpzone.css": "/admin/dist/css/drpzone.css",
+    "/admin/dist/css/dropzone.css": "/admin/dist/css/dropzone.css",
     "/admin/dist/js/dropzone.js": "/admin/dist/js/dropzone.js"
 }
